<resources>
    <string name="app_name">SSI AGROWORLD</string>
    <string name="register">Register</string>
    <string name="already_hav">Already have an account?<b>Login</b></string>
    <string name="enter_email">Enter Email ID Here</string>
    <string name="phone_numbe">Phone Number*</string>
    <string name="email_id_">Email ID*</string>
    <string name="last_name_">Last Name*</string>
    <string name="enter_last_">Enter Last Name Here</string>
    <string name="first_name_">First Name*</string>
    <string name="enter_first">Enter First Name Here</string>
    <string name="select_user">Select User*</string>
    <string name="hello_sign_">Hello! Sign up to get started</string>
    <string name="bde">BDE</string>
    <string name="enter_code_">Enter code sent to your phone</string>
    <string name="we_sent_it_">We sent it to the number +995 599 390 ** **</string>
    <string name="login">Submit</string>
    <string name="resend_code">Resend code in 00:47 Sec</string>
    <string name="thanks_for_">Thanks for Registration!</string>
    <string name="now_please_">Now, please wait until your account is reviewed and approved
        by the Admin before you log in to the app. You will
        be \nnotified by SMS &amp; Email once it is verified.</string>
    <string name="continue1">Continue</string>
    <string name="update">Update</string>
    <string name="aditya">Aditya</string>
    <string name="gupta">Gupta</string>
    <string name="agupta_syst">agupta@systango.com</string>
    <string name="some_id">+91 9826 00 00 00</string>
    <string name="home">Home</string>
    <string name="my_meetings">My Meetings</string>
    <string name="leads">Leads</string>
    <string name="profile">Profile</string>
    <string name="aditya_gupt">Aditya Gupta</string>
    <string name="success">Success</string>
    <string name="your_succes">Your successfully updated your profile</string>
    <string name="okay">Okay</string>
    <string name="enter_your_">Enter your mobile number</string>
    <string name="we_will_sen">We will send you confirmation code</string>
    <string name="login1">Login</string>
    <string name="exit_confir">Exit confirmation</string>
    <string name="cancel">Back</string>
    <string name="some_mobile">8085144144</string>
    <string name="interest_st">Interest Status</string>
    <string name="name">Name</string>
    <string name="contact_num">Contact Number</string>
    <string name="lead_source">Lead Source Type</string>
    <string name="poc_email_i">POC Email ID</string>
    <string name="enter_poc_b">Enter POC Business Number Here</string>
    <string name="poc_phone_n">POC Phone Number</string>
    <string name="poc_type_te">POC Type / Team</string>
    <string name="enter_name_">Enter Name Here</string>
    <string name="poc_name">POC Name</string>
    <string name="business_em">Business Email</string>
    <string name="enter_your_social">Enter Your Social Link</string>
    <string name="social_hand">Social Handle</string>
    <string name="enter_your_web">Enter Your Website</string>
    <string name="website">Website</string>
    <string name="enter_landl">Enter Landline / Phone Number Here</string>
    <string name="landline_ph">Landline / Phone Number</string>
    <string name="email_addre">Email Address</string>
    <string name="enter_email_here">Enter Email Address Here</string>
    <string name="next">Next</string>
    <string name="some_pin">452006</string>
    <string name="pin_code">Pin Code</string>
    <string name="enter_addre">Enter Address Here</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="systango_te">Systango Technology</string>
    <string name="country">Country</string>
    <string name="don_t_have_">Don\'t have an account? <b>Register</b></string>
    <string name="verify">Verify</string>
    <string name="company_nam">Company Name</string>
    <string name="name_error">First Name Required</string>
    <string name="phone_error">Phone Number Required</string>
    <string name="phone_invalid_error">Enter a Valid phone number</string>
    <string name="email_error">Email Address Required</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="last_error">Last Name Required</string>
    <string name="add_a_lead">Add a Lead</string>
    <string name="yes">Yes</string>
    <string name="done">Done</string>
    <string name="cancell">Cancel</string>
    <string name="product_cat">Product Category</string>
    <string name="the_changes">The changes made will be lost, Do still want to continue?</string>
    <string name="basmati_ric_1">1121 Basmati Rice</string>
    <string name="barley">Barley</string>
    <string name="basmati_ric">Basmati Rice</string>
    <string name="gram">Gram</string>
    <string name="oats">Oats</string>
    <string name="pusa_basmat">Pusa Basmati Rice</string>
    <string name="sorghum_red">Sorghum (Red &amp; White)</string>
    <string name="toor_daal">Toor Daal</string>
    <string name="traditional">Traditional Brown Basmati Rice</string>
    <string name="title_activity_all_leads_v2">All_Leads_V2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="filter">Filter</string>
    <string name="sort_">Sort:</string>
    <string name="systango">Systango</string>
    <string name="a_2_indore_">A-2, Indore, Madhya Pradesh</string>
    <string name="prospect">Prospect</string>
    <string name="all_leads">All Leads</string>
    <string name="filter_lead">Filter Leads</string>
    <string name="search_by_n">Search by Name</string>
    <string name="search_by_p">Search by Product</string>
    <string name="enter_produ">Enter Product Name Here</string>
    <string name="search_by_s">Search by Stage</string>
    <string name="filterlead">Filter Lead</string>
    <string name="dashboard">Dashboard</string>

</resources>