<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_a_Prospect_2"
    android:orientation="vertical">
    <include layout="@layout/add_prospect_header"/>
    <TextView
        android:text="@string/email_addre"
        style="@style/TextInputLayoutHeading"/>
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/etemail"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="0dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditTextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email_here" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:text="@string/landline_ph"
        style="@style/TextInputLayoutHeading"/>
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/etphoneno"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="0dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditTextStyle"
            android:inputType="phone"
            android:hint="@string/enter_landl" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:text="@string/website"
        style="@style/TextInputLayoutHeading"/>
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/etwebsite"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="0dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditTextStyle"
            android:hint="@string/enter_your_web" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:text="@string/social_hand"
        style="@style/TextInputLayoutHeading"/>
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/etsociallink"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="0dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditTextStyle"
            android:hint="@string/enter_your_social" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:text="@string/business_em"
        style="@style/TextInputLayoutHeading"/>
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/etbusinessemail"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            style="@style/TextInputEditTextStyle"
            android:hint="@string/enter_email_here" />

    </com.google.android.material.textfield.TextInputLayout>
    <include layout="@layout/add_prospect_bottom_button"/>

</LinearLayout>