<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Add_a_Prospect_4">
    <include layout="@layout/add_prospect_header"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        style="@style/TextInputLayoutHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/etPocphoneno"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="0dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditTextStyle"
            android:layout_height="48dp"
            android:inputType="phone"
            android:text="@string/aditya_gupt" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:text="@string/contact_num"
        style="@style/TextInputLayoutHeading"/>
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/etPocEmail"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="0dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditTextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/some_mobile" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:text="@string/interest_st"
        style="@style/TextInputLayoutHeading"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerLeadSourcceType"
        style="@style/SpinnerTheme"
        />
</LinearLayout>

   <include layout="@layout/add_prospect_bottom_button"/>


</LinearLayout>