<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profileImag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/bgimage"
        app:layout_constraintEnd_toEndOf="@+id/bgimage"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="@+id/bgimage"
        app:layout_constraintTop_toTopOf="@+id/bgimage"
        app:srcCompat="@drawable/ic_profile" />

    <ImageView
        android:id="@+id/bgimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile_bg" />

    <ImageView
        android:id="@+id/cameraImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/profileImag"
        app:layout_constraintEnd_toEndOf="@+id/profileImag"
        app:srcCompat="@drawable/ic_camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/bgimage">

        <TextView
            android:id="@+id/hello_sign_"
            android:layout_width="229dp"
            android:layout_height="73dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins"
            android:lineSpacingExtra="0sp"
            android:text="@string/hello_sign_"
            android:textAppearance="@style/hello_sign_"
            app:lineHeight="36sp" />

        <TextView
            android:id="@+id/select_user"
            style="@style/TextInputLayoutHeading"
            android:text="@string/select_user" />

        <androidx.appcompat.widget.AppCompatSpinner

            android:id="@+id/userTypeSpinner"
            style="@style/SpinnerTheme" />

        <TextView
            android:id="@+id/first_name_3"
            style="@style/TextInputLayoutHeading"
            android:text="@string/first_name_" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameTextField"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditTextStyle"
                android:hint="@string/enter_first" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/last_name"
            style="@style/TextInputLayoutHeading"
            android:text="@string/last_name_" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameTextField"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditTextStyle"
                android:hint="@string/enter_last_" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/email_id"
            style="@style/TextInputLayoutHeading"
            android:text="@string/email_id_" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditTextStyle"
                android:hint="@string/enter_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phone_numbe"
            style="@style/TextInputLayoutHeading"
            android:text="@string/phone_numbe" />

        <LinearLayout

            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle_box"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/india_1"
                android:layout_width="18dp"
                android:layout_height="21dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/india" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/more" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_phonee"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                app:errorIconDrawable="@drawable/ic_end_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_"
                    android:inputType="phone"
                    android:textAppearance="@style/enter_your_nu" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBtn"
            style="@style/PrimaryButtonTheme"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:stateListAnimator="@null"
            android:text="@string/register" />

        <TextView
            android:id="@+id/already_hav"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="22dp"
            android:text="@string/already_hav"
            android:textAppearance="@style/already_hav" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>